--- a/shellcode0/Cargo.toml
+++ b/shellcode0/Cargo.toml
@@ -16,3 +16,4 @@ lto = true
 [dependencies]
 num-traits = { version = "0.2.19", default-features = false }
 utf16_literal = "0.2.1"
+widestring = "0.5"
